# swagger/output.json
@@ -251,12 +251,111 @@
         }
       }
     },
+    "/api/admin/uploads": {
+      "post": {
+        "tags": [
+          "Order"
+        ],
+        "summary": "Загрузка файла",
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/api/admin/settings/region": {
+      "post": {
+        "tags": [
+          "Settings"
+        ],
+        "summary": "Создание региона",
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "country": {
+                  "example": "any"
+                },
+                "city": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Settings"
+        ],
+        "summary": "Получить все регионы",
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/admin/settings/region/{id}": {
+      "get": {
+        "tags": [
+          "Settings"
+        ],
+        "summary": "Получить один регион",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/user/me": {
       "get": {
         "tags": [
           "User"
         ],
-        "summary": "Получить пользователя",
+        "summary": "Получить текущего пользователя",
         "description": "",
         "parameters": [],
         "responses": {
